--- a/style.css
+++ b/style.css
@@ -11,22 +11,33 @@ body {
     align-items: center;
 }
 
+p, h2 {
+    text-align: right;
+}
+
+h2 {
+    font-size: 2rem;
+}
+
 .calculator {
     border: 1px solid black;
     height: 512px;
     width: 350px;
 }
 
-.calculations input {
-    width: 100%;
-    height: 70px;
-    text-align: right;
+.screen {
+    height: 65px;
 }
 
 .numpad {
     display: grid;
     border: 1px solid red;
-    height: 86%;
+    height: 80%;
     grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    grid-template-areas: "row1 row1 row1";
 }
 
+.row1 {
+    grid-area: row1
+}
