--- a/style.css
+++ b/style.css
@@ -1,43 +1,70 @@
-* {
-    margin: 0;
-    padding: 0;
+*, *::after, *::before {
     box-sizing: border-box;
 }
 
 body {
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    padding: 0;
+    margin: 0;
+    position: relative;
 }
 
-p, h2 {
-    text-align: right;
+.calculator-grid {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 50%);
+    width: 420px;
+    height: 600px;
+    background: black;
 }
 
-h2 {
-    font-size: 2rem;
-}
-
-.calculator {
-    border: 1px solid black;
-    height: 512px;
-    width: 350px;
-}
-
-.screen {
-    height: 65px;
-}
-
-.numpad {
+.num-pad {
     display: grid;
-    border: 1px solid red;
-    height: 80%;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(5, 1fr);
-    grid-template-areas: "row1 row1 row1";
+    justify-content: center;
+    align-content: center;
+    grid-template-columns: repeat(4, 100px);
+    grid-template-rows: repeat(5, 100px);
 }
 
-.row1 {
-    grid-area: row1
+.num-pad > button {
+    background-color: darkgray;
+    cursor: pointer;
+    width: 100px;
+    font-size: 2rem;
+    outline: none;
+    border-radius: 50px;
+
 }
+
+.calculator-grid > button:hover {
+    background-color: rgba(255, 255,255, .9);
+}
+
+/* .span-two {
+    grid-column: span 2;
+} */
+
+.output {
+    height: 90px;
+    grid-column: 1 / -1;
+    background-color: rgba(0, 0, 0, .75);
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-around;
+    flex-direction: column;
+    padding: 10px;
+    word-wrap: break-word;
+    word-break: break-all;
+}
+
+.output .previous-operand { 
+    color: rgba(255,255,255, .75);
+    font-size: 1.5rem;
+}
+
+.output .current-operand { 
+    color: white;
+    font-size: 2.5rem;
+}
+
+
