--- a/style.css
+++ b/style.css
@@ -5,14 +5,13 @@
 body {
     padding: 0;
     margin: 0;
-    position: relative;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .calculator-grid {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, 50%);
     width: 420px;
     height: 600px;
     background: black;
